[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/scene_compositor/ui/panels/SceneCompositorGraph.gd" type="Script" id=1]


[node name="SceneCompositorGraph" type="GraphEdit"]
anchor_left = -0.000893056
anchor_right = 0.999
anchor_bottom = 1.0
margin_top = 34.0
margin_right = 0.109436
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
scroll_offset = Vector2( -6.10352e-05, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="connection_request" from="." to="." method="_on_NodeGraph_connection_request"]
[connection signal="disconnection_request" from="." to="." method="_on_NodeGraph_disconnection_request"]
[connection signal="resized" from="." to="." method="_on_NodeGraph_resized"]
